fix several equals methods, remove empty MonitoringCounterConfig
Signed-off-by: Dominik Guggemos <dominik.guggemos@bosch.io>